--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,5 +1,3 @@
-import = ["/Users/dlt/.config/alacritty/themes/gruvbox-material-alacritty.yml"]
-live_config_reload = true
 
 [cursor.style]
 blinking = "On"
@@ -9,7 +7,7 @@ shape = "Block"
 size = 15
 
 [font.bold]
-family = "FiraCode Nerd Font Mono"
+family = "Hack Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
@@ -21,7 +19,7 @@ family = "Hack Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "FiraCode Nerd Font Mono"
+family = "Hack Nerd Font"
 style = "Regular"
 
 [scrolling]
@@ -32,7 +30,7 @@ save_to_clipboard = true
 semantic_escape_chars = ",│`|:\"' ()[]{}<>\t"
 
 [window]
-decorations = "none"
+#decorations = "none"
 dynamic_padding = false
 dynamic_title = false
 opacity = 0.95
@@ -49,3 +47,7 @@ y = 0
 [window.position]
 x = 2500
 y = 700
+
+[general]
+import = ["/Users/dlt/.config/alacritty/themes/gruvbox-material-alacritty.yml"]
+live_config_reload = true
